05092026 Before FL Clear
